Add background Image and main classes

--- a/SpaceBunnyJump/SpaceBunnyJump/SpaceBunnyJump.csproj
+++ b/SpaceBunnyJump/SpaceBunnyJump/SpaceBunnyJump.csproj
@@ -6,4 +6,41 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Textures\alien.png" />
+    <None Remove="Textures\background.jpg" />
+    <None Remove="Textures\bullet.png" />
+    <None Remove="Textures\carrot.png" />
+    <None Remove="Textures\platform.png" />
+    <None Remove="Textures\player.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Textures\alien.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Textures\background.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Textures\bullet.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Textures\carrot.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Textures\player.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Textures\platform.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
