--- a/SpaceBunnyJump/SpaceBunnyJump/SpaceBunnyJump.csproj
+++ b/SpaceBunnyJump/SpaceBunnyJump/SpaceBunnyJump.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Player\Player.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove="Textures\alien.png" />
     <None Remove="Textures\background.jpg" />
     <None Remove="Textures\background.png" />
@@ -39,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.LiveShare" Version="1.1.57" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
